syntax = "proto3";

option go_package = "github.com/openshift/dpu-operator/api/dpu-api";

package Vendor;

service LifeCycleService {
  rpc Init(InitRequest) returns (IpPort);
}

service NetworkFunctionService {
  rpc CreateNetworkFunction(NFRequest) returns (Empty);
  rpc DeleteNetworkFunction(NFRequest) returns (Empty);
}

message InitRequest {
  bool dpu_mode = 1;
}

message IpPort {
  string ip = 1;
  int32 port = 2;
}

message NFRequest {
  string input = 1;
  string output = 2;
}

message Empty {}
